===============
Stalker Changes
===============

0.2.0.b4
--------
* WebUI:
  * Fix: Fixed the error in rendering of the **home** occurred when there is no
    user login information found in the request.
  * New: User thumbnails now can be changed.
  * New: Project thumbnails now can be changed.
  * New: ``content_list_projects`` now shows the project thumbnails.
  * New: ``content_list_users`` now shows the user thumbnails.
  * New: ``submitForm.js`` now enables all the disabled fields of the given
    form, and disables them back again upon error.
  * Fix: ``TagSelect.js`` will now correctly disable the child widgets if the
    ``disabled`` attribute is set to **true**.

0.2.0.b3
--------

* SOM:
  * Update: FilenameTemplate's are not ``strictly typed`` anymore.
  * Update: Removed the FilenameTemplate type initialization, FilenameTemplates
    do not depend on Types anymore.
  * Update: Added back the ``plural_class_name`` (previously ``plural_name``)
    property to the ORMClass class, so all the classes in SOM now have this new
    property. 
  * Update: Added ``accepts_references`` attribute to the EntityType class.
  * New: The Link class has a new attribute called ``original_filename`` to
    store the original file names of link files.
  * New: Added **alembic** to the project requirements.
  * New: Added alembic migrations which adds the ``accepts_references`` column
    to ``EntityTypes`` table and ``original_name`` to the ``Links`` table.
* WebUI:
  * Update: Updated to Dojo 1.9
  * Update: stalker.js is renamed to dialogs.js and it is now fully compatible
    with Dojo AMD.
  * Update: Merged StatusList create and update dialogs in to one.
  * Update: Content List - Task now checks user permissions to disable part of
    the UI.
  * Update: Added description field to the Summarize Task view.
  * Update: Added permission checks to several views.
  * Fix: Fixed fieldUpdater.js to work properly with Dojo 1.9 especially for
    MultiSelect widgets.