@@ -103,7 +103,7 @@ def create_shot(request):
                         detail='No StatusList found'
                     )
                 
-                status_id = int(request.params['status_id'])
+                status_id = request.params['status_id']
                 status = Status.query.filter_by(id=status_id).first()
                 
                 # get the info
