@@ -4,6 +4,7 @@ Stalker Changes
 
 0.2.0.b4
 --------
+
 * WebUI:
   * Fix: Fixed the error in rendering of the **home** occurred when there is no
     user login information found in the request.
@@ -15,6 +16,11 @@ Stalker Changes
     form, and disables them back again upon error.
   * Fix: ``TagSelect.js`` will now correctly disable the child widgets if the
     ``disabled`` attribute is set to **true**.
+  * New: Added ``fields`` javascript library which are a special group of input
+    fields designed to be used with Stalker.
+  * New: Added the first input field to stalker/fields, called ``tagField``. It
+    is now possible to add a TagSelect field which is correctly updated by only
+    two lines of code.
 
 0.2.0.b3
 --------
@@ -60,8 +66,8 @@ Stalker Changes
     and update dialogs.
   * Update: In create/update_group dialog, to check all rows new checkboxes are
     added to head of each column.
-  * Update: For the necessary in create/update_department dialog, ComboBox is
-    added to TagSelect widget as a new input area type.
+  * Update: ``ComboBox`` is added to TagSelect widget as a new input widget
+    type.
   * Update: Description field is added to Department dialog.
 
 0.2.0.b2
